Correcting the month calendar non visible days and day number and day date and making reusable component of eventOnCreation

--- a/frontend/booking-frontend/src/App.css
+++ b/frontend/booking-frontend/src/App.css
@@ -651,7 +651,7 @@ body {
     }
 
     &.empty {
-      display: none;
+      visibility: hidden;
     }
 
     &.today {
